# VuittonCut

./: .gitignore
src/: CMakeLists.txt
src/cut/: CMakeLists.txt
src/cut/app/: main.cpp
src/cut/base/: framelesswindow.h  framelesswindow_mac.mm  iconbutton.cpp  iconbutton.h  imageutil.cpp  imageutil.h
src/cut/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/cut/view/Resources/images/: cut.icns
src/engine/: CMakeLists.txt
src/engine/src/: engine.cpp
src/patch/: libopenshot-audio.patch  libopenshot.patch  libopenshot_unset_CMAKE_MODULE_PATH_remove_zemq.patch
